2010-05-26  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/44164
	* tree-ssa-alias.c (aliasing_component_refs_p): Fix the
	no-common access-path disambiguation.
	(indirect_ref_may_alias_decl_p): Adjust.
	(indirect_refs_may_alias_p): Likewise.
	(refs_may_alias_p_1): Likewise.

2010-05-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44069
	* tree-ssa-ccp.c (maybe_fold_stmt_addition): Avoid generating
	out-of-bounds array accesses.

2010-05-26  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2010-04-15  Richard Guenther  <rguenther@suse.de>

	* alias.c (alias_set_subset_of): Handle alias-set zero
	child properly.

2010-05-26  Jakub Jelinek  <jakub@redhat.com>

	PR target/44199
	* config/rs6000/rs6000.c (rs6000_emit_epilogue): If cfun->calls_alloca
	or total_size is larger than red zone size for non-V4 ABI, emit a
	stack_tie resp. frame_tie insn before stack pointer restore.
	* config/rs6000/rs6000.md (frame_tie): New insn.

2010-05-25  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (gcc_cv_as_ld_jalr_reloc): Redirect grep stdout,
	stderr to /dev/null instead of grep -q.
	* configure: Regenerate.

2010-05-25  Richard Guenther  <rguenther@suse.de>

	* gimple.c (gimple_types_compatible_p): Check type qualifications
	before merging pointer to complete and pointer to incomplete type.
	* lto-symtab.c (lto_symtab_resolve_symbols): For commons make sure
	we use our own resolution algorithm.  The gold linker plugin
	doesn't do the job we want it to do here.

2010-05-24  Richard Guenther  <rguenther@suse.de>

	PR lto/44196
	* tree.c (find_decls_types_r): Walk BLOCKs and its vars.

2010-05-24  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-05-20  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43733
	* configure.ac (gcc_cv_as_ix86_sahf): Switch to 64bit mode.
	* configure: Regenerate.
	* config.in: Regenerate.
	* config/i386/i386.md (x86_sahf_1): Conditionally output 0x9e
	instead of sahf only for 64bit targets.