@@ -1,7 +1,7 @@
 /* Definitions of target machine for GNU compiler, Lattice Mico32 architecture.
    Contributed by Jon Beniston <jon@beniston.com>
 
-   Copyright (C) 2009 Free Software Foundation, Inc.
+   Copyright (C) 2009, 2010 Free Software Foundation, Inc.
 
    This file is part of GCC.
 
@@ -370,9 +370,6 @@ enum reg_class
 #else
 #define REG_OK_FOR_BASE_P(X) NONSTRICT_REG_OK_FOR_BASE_P(X)
 #endif
-
-#define GO_IF_MODE_DEPENDENT_ADDRESS(ADDR, LABEL) 			\
-  if (GET_CODE (ADDR) == PLUS) goto LABEL;		      		\
 
 #define LEGITIMATE_CONSTANT_P(X) lm32_legitimate_constant_p
 
