@@ -1,3 +1,9 @@
+2010-05-27  Jon Beniston <jon@beniston.com>
+
+	PR 43726
+	* config/lm32/lm32.h: Remove definition of
+	GO_IF_MODE_DEPENDENT_ADDRESS. Update copyright year.
+
 2010-05-26  Richard Guenther  <rguenther@suse.de>
 
 	PR rtl-optimization/44164
